Basic Recursion Exercises all renamed

--- a/Exercises/RecurTutor/recCAddoddPROG.html
+++ b/Exercises/RecurTutor/recCAddoddPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 4</title>
+  <title> Recursion Programming Exercise: add odd numbers</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
@@ -24,13 +24,6 @@
   
 
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
   <div class="problems">
     <div> <!-- Supresses answer box -->
      <p class="problem" id = "test"> Given the following recursive function write down the missing recursive call such that this function returns the sum of all positive odd numbers less than or equal to n.
@@ -54,15 +47,14 @@
 }
 </textarea></p>
 
-      <div class="question">
-	
+      <div class="question">	
       </div>
       <div class="solution" data-type="custom">
       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";    
-          window.summexName=  "recwrc4PROG";
+          window.summexName=  "recCAddoddPROG";
         </div>
       </div>
       <div class="hints">
