--- a/Exercises/RecurTutor/recCGetDigitsPROG.html
+++ b/Exercises/RecurTutor/recCGetDigitsPROG.html
@@ -22,17 +22,12 @@
 <body  data-height="550" data-width="950">
    
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
-  <div class="problems">
+   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">  Given the following recursive function write down the missing recursive call such that this function counts the number of digits in an integer. Given  that digits is initially set to 1 on invoking the recursive function.
-
+      <p class="problem" id = "test">  Given the following recursive function 
+      write down the missing recursive call such that this function counts 
+      the number of digits in an integer. Given  that digits is initially set 
+      to 1 on invoking the recursive function.
       <br />
     </h4>
     <p></p>
@@ -54,7 +49,7 @@ return //<<Missing a Recursive call>>
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";    
-          window.summexName= "recwrc11PROG";
+          window.summexName= "recCGetDigitsPROG";
         </div>
       </div>
       <div class="hints">
