--- a/Exercises/RecurTutor/recCSumAllPROG.html
+++ b/Exercises/RecurTutor/recCSumAllPROG.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 24</title>
-  <script src="../../lib/jquery.min.js">
-  </script>
-  <script src="../../lib/jquery-ui.min.js">
-  </script>
-  <script>
-    window.OpenPopKa = true;
-  </script>
+  <title> Recursion Programming Exercise: Sum the numbers</title>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-
+   <script src="../../lib/odsaStyle-min.css"></script>
+ 
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
@@ -20,13 +17,12 @@
     lineNumbers: true,
     mode:  "text/x-java"
   });
-  </script>  
+  
+  </script>
 
- 
 </head>
-<body  data-height="650" data-width="950">
+<body  data-height="550" data-width="950">
    
-
 <div class="exercise">
   <div class="vars">
     <var id="listel1">randRange(0, 99)</var>
@@ -37,26 +33,20 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">  Given the following recursive function signature, write the function code 
-      such that takes two positive integers X and Y as its input where  X less than Y,	and outputs 
-      the minimal number of invocations of the operations +1 and ∗2 that are required to obtain Y from X. 
-      For Example: If the inputs 10 17, the output will be 7 (due to 7 invocations of +1). For the input 10 21, the output will be 2 
-      (due to ∗2 and then +1).
-			
- <br />
-</h4>
- <p></p>
-  
-<textarea  id="codeTextarea">int minOps (int x, int y)
+      <p class="problem" id = "test"> Given the following recursive function 
+      write down the missing recursive call such that this function given 
+      2 numbers, will find the sum of all the integers between them. 
+      Example: given 1 and 4, the method should add 1+2+3+4 = 10.
+
+      <br />
+    </h4>
+    <p></p>
+    <textarea  id="codeTextarea">int sumAll(int a, int b)
 {
-
-
-
-
-
-
-
-
+  if (a == b)
+    return a;
+  else
+    return //<<Missing a Recursive call>>
 }
 </textarea></p>
 
@@ -64,12 +54,11 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ editor.getValue() ] </div>
+      <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
           window.codeValue = editor.getValue();
-          window.progexType= "recursion";
-          window.summexName= "recw24PROG";
-         //return "openPop";
+          window.progexType= "recursion";    
+          window.summexName=  "recCSumAllPROG";
         </div>
       </div>
       <div class="hints">
@@ -77,6 +66,6 @@
     </div>
   </div>
 </div>
-
+ 
 </body>
 </html>
