--- a/Exercises/RecurTutor/recCodeCompSumm2.html
+++ b/Exercises/RecurTutor/recCodeCompSumm2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Code Completion: Math Function Recursive Call </title>
+  <title> Recursion Code Completion Set 2 </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
@@ -14,8 +14,8 @@
 </head>
 
 <body  data-height="580" data-width="1000">
-  <div class="exercise" data-name="recwbcrc3PROG"></div>
-  <div class="exercise" data-name="recwrc6PROG"></div>
-  <div class="exercise" data-name="recwrc10PROG"></div>
+  <div class="exercise" data-name="recCLogPROG"></div> 
+  <div class="exercise" data-name="recCPowerPROG"></div>
+  <div class="exercise" data-name="recCSumtokPROG"></div>
 </body>
 </html>
