--- a/Exercises/RecurTutor/recCodeCompSumm4.html
+++ b/Exercises/RecurTutor/recCodeCompSumm4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Code Completion: Count Function Recursive Call </title>
+  <title> Recursion Code Completion Set 4 </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
@@ -14,8 +14,8 @@
 </head>
 
 <body  data-height="580" data-width="1000">
-  <div class="exercise" data-name="recwrc11PROG"></div>
-  <div class="exercise" data-name="recwrc12PROG"></div>
+  <div class="exercise" data-name="recCGetDigitsPROG"></div> 
+  <div class="exercise" data-name="recCCountChrPROG"></div> 
 
 </body>
 </html>
