--- a/Exercises/RecurTutor/recHFibPROG.html
+++ b/Exercises/RecurTutor/recHFibPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 14</title>
+  <title> Recursion Programming Exercise: Fibonacci</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -36,7 +36,9 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">  Given the following recursive function write down the missing recursive calls such that this function computes the Fibonacci of a given number.
+      <p class="problem" id = "test">  Given the following recursive function 
+      write down the missing recursive calls such that this function computes 
+      the Fibonacci of a given number.
 	 
     <br />
     </h4>
@@ -60,7 +62,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";          
-          window.summexName= "rechwrc14PROG";
+          window.summexName= "recHFibPROG";
          //return "openPop";
         </div>
       </div>
