--- a/Exercises/RecurTutor/recHrdCodeCompSumm.html
+++ b/Exercises/RecurTutor/recHrdCodeCompSumm.html
@@ -16,10 +16,10 @@
 </head>
 
 <body  data-height="580" data-width="1000">
-  <div class="exercise" data-name="rechwrc14PROG"></div>
-  <div class="exercise" data-name="rechwrcra16PROG"></div>
-  <div class="exercise" data-name="rechwrc17PROG"></div>
-  <div class="exercise" data-name="rechw2bc18PROG"></div>
-  <div class="exercise" data-name="rechw2bc15PROG"></div>
+  <div class="exercise" data-name="recHFibPROG"></div> 
+  <div class="exercise" data-name="recHDecibinaryPROG"></div> 
+  <div class="exercise" data-name="recHMinPROG"></div>
+  <div class="exercise" data-name="recHIsReversePROG"></div> 
+  <div class="exercise" data-name="recHPrimePROG"></div>
 </body>
 </html>
