--- a/Exercises/RecurTutor/recWChckPlndrmPROG.html
+++ b/Exercises/RecurTutor/recWChckPlndrmPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 22</title>
+  <title> Recursion Programming Exercise: Check Palindrome</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -27,16 +27,13 @@
 </head>
 <body  data-height="600" data-width="950">
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
+ 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function signature, write the function code such that this function takes a string and returns true if it is read the same forwards or back-wards (palindrome). Assume that the given string has no spacing. For example: eye,or racecar, or madam are considered palindromes.<br />
+      <p class="problem" id = "test"> Given the following recursive function 
+      signature, write the function code such that this function takes a string 
+      and returns true if it is read the same forwards or back-wards (palindrome). Assume that the given string has no spacing. 
+      For example: eye,or racecar, or madam are considered palindromes.<br />
 </h4>
  <p></p>
  
@@ -59,7 +56,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "recw22PROG";
+          window.summexName= "recWChckPlndrmPROG";
          //return "openPop";
         </div>
       </div>
