--- a/Exercises/RecurTutor/recWCountInvPROG.html
+++ b/Exercises/RecurTutor/recWCountInvPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 23</title>
+  <title> Recursion Programming Exercise: Count Inversions</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -11,9 +11,7 @@
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 
-  <script src="../../lib/odsaStyle-min.css"></script>
- 
- 
+  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -22,39 +20,40 @@
     lineNumbers: true,
     mode:  "text/x-java"
   });
-  </script>     
+  </script>  
 
+  
 </head>
-<body  data-height="600" data-width="950">
+
+<body  data-height="600" data-width="1000">
    
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
-  <div class="problems">
+   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function signature, write the function code such that this function returns the given string in a reverse order. <br />
+      <p class="problem" id = "test">
+       Given the following recursive function signature, write the function code 
+       such that this function counts the number of inversions in a list of 
+       numbers. 
+       Example: for the input list 2 9 1 8, the output will be 3 
+       (due to the inversions 2 &gt; 1, 9 &gt; 1, and 9 &gt; 8):
+ <br />
 </h4>
- <p></p>
+<p></p>
  
-<textarea  id="codeTextarea"> String reverseStringRecursive (String str)
-{
+<textarea  id="codeTextarea">int countInversions(int nums[]){
 
 
 
 
 
+	
 
 
-		
+
 }
 </textarea></p>
 
-      <div class="question">
+       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
@@ -62,7 +61,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "recw23PROG";
+          window.summexName= "recWCountInvPROG";
          //return "openPop";
         </div>
       </div>
