--- a/Exercises/RecurTutor/recWMinOpsPROG.html
+++ b/Exercises/RecurTutor/recWMinOpsPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 28</title>
+  <title> Recursion Programming Exercise: Minimum number of Operations</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -11,7 +11,7 @@
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 
-  
+ 
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -22,41 +22,38 @@
   });
   </script>  
 
-  
+ 
 </head>
-
-<body  data-height="600" data-width="1000">
+<body  data-height="650" data-width="950">
    
-<div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
 
-  <div class="problems">
+<div class="exercise">
+   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">
-       Given the following recursive function signature, write the function code such that this function counts the number of inversions in a list of numbers. Example: for the input list 2 9 1 8, the output will be 3 (due to the inversions 2 &gt; 1, 9 &gt; 1, and 9 &gt; 8):
+      <p class="problem" id = "test">  Given the following recursive function signature, write the function code 
+      such that takes two positive integers x and y as its input where  x less than y,	and outputs 
+      the minimal number of invocations of the operations +1 and ∗2 that are required to obtain y from x. 
+      For Example: If the inputs 10 17, the output will be 7 (due to 7 invocations of +1). For the input 10 21, the output will be 2 
+      (due to ∗2 and then +1).
+			
  <br />
 </h4>
-<p></p>
- 
-<textarea  id="codeTextarea">int countInversions(int nums[]){
+ <p></p>
+  
+<textarea  id="codeTextarea">int minOps (int x, int y)
+{
 
 
 
 
 
-	
 
 
 
 }
 </textarea></p>
 
-       <div class="question">
+      <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
@@ -64,7 +61,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "recw28PROG";
+          window.summexName= "recWMinOpsPROG";
          //return "openPop";
         </div>
       </div>
