--- a/Exercises/RecurTutor/recWPascalPROG.html
+++ b/Exercises/RecurTutor/recWPascalPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 20</title>
+  <title> Recursion Programming Exercise: Pascal Triangle</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -30,13 +30,6 @@
 <body  data-height="800" data-width="1100">
    
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
   <div class="problems">
     <div> <!-- Supresses answer box -->
 
@@ -53,10 +46,8 @@
 
 		 
 
-
 }
 </textarea>
-
 </p>
 
       <div class="question">
@@ -67,7 +58,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "recw20PROG";
+          window.summexName= "recWPascalPROG";
          //return "openPop";
         </div>
       </div>
