--- a/Exercises/RecurTutor/recWStckRevrsPROG.html
+++ b/Exercises/RecurTutor/recWStckRevrsPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 19</title>
+  <title> Recursion Programming Exercise: Stack Reversal</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -29,16 +29,12 @@
    
 
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
-  <div class="problems">
+    <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">    Given the following recursive function signature, write the recursive function to reverse a given stack without using any other data structures.  Only local simple variable storage may be used. You do not need to implement a function to push, pop or check if the stack is empty. You will need to use the given popBottom function with no modifications to its code. Assume that the Stack given is a Stack of integers. Your solution can take advantage that Java perform autoboxing. 
+      <p class="problem" id = "test">    Given the following recursive function signature, write the recursive function to reverse a given 
+      stack without using any other data structures.  Only local simple variable storage may be used. You do not need to implement a function to push, 
+      pop or check if the stack is empty. You will need to use the given popBottom function with no modifications to its code. Assume that the Stack given 
+      is a Stack of integers. Your solution can take advantage that Java perform autoboxing. 
 <br />
 
 </h4>
@@ -71,7 +67,7 @@ public static int popBottom(Stack<Integer> s){
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";          
-          window.summexName= "recw19PROG";
+          window.summexName= "recWStckRevrsPROG";
          //return "openPop";
         </div>
       </div>
