--- a/Exercises/RecurTutor/recWriteSumm2.html
+++ b/Exercises/RecurTutor/recWriteSumm2.html
@@ -16,10 +16,10 @@
 </head>
 
 <body  data-height="650" data-width="1000">
-  <div class="exercise" data-name="recw22PROG"></div>
-  <div class="exercise" data-name="recw23PROG"></div>
-  <div class="exercise" data-name="recw25PROG"></div>
-  <div class="exercise" data-name="recw27PROG"></div>
+  <div class="exercise" data-name="recWChckPlndrmPROG"></div>
+  <div class="exercise" data-name="recWRvrsStrngPROG"></div>
+  <div class="exercise" data-name="recWIsSubsetSumPROG"></div>
+  <div class="exercise" data-name="recWRmvDuplctPROG"></div>
 
 </body>
 </html>
