--- a/Exercises/RecurTutor/recWriteSumm3.html
+++ b/Exercises/RecurTutor/recWriteSumm3.html
@@ -16,10 +16,9 @@
 </head>
 
 <body  data-height="900" data-width="1000">
-  <div class="exercise" data-name="recw19PROG"></div>
-  <div class="exercise" data-name="recw20PROG"></div>
-  <div class="exercise" data-name="recw21PROG"></div>
-  <div class="exercise" data-name="recw31PROG"></div>
-
+ <div class="exercise" data-name="recWStckRevrsPROG"></div>
+ <div class="exercise" data-name="recWPascalPROG"></div>
+ <div class="exercise" data-name="recWCnonballPROG"></div>
+ <div class="exercise" data-name="recWIsMeasurblPROG"></div>
 </body>
 </html>
