--- a/Exercises/RecurTutor/recCLargestPROG.html
+++ b/Exercises/RecurTutor/recCLargestPROG.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 3</title>
-  <script src="../../lib/jquery.min.js"></script>
+  <title> Recursion Programming Exercise: Largest </title>
+ <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -19,45 +19,44 @@
   });
   
   </script>
+
+  
+
+
 </head>
-<body  data-height="550" data-width="950">
+<body  >
    
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
-  <div class="problems">
+   <div class="problems">
     <div> <!-- Supresses answer box -->
-   
-      <p class="problem" id = "test">  Given the following recursive function write down the missing recursive call such that this function computes the value of y to the x power:
-
-    
+      <p class="problem" id = "test"> Write down the missing base case for the 
+      following recursive function such that this function finds the largest 
+      number in the array named numbers:
       <br />
     </h4>
     <p></p>
-    <textarea  id="codeTextarea">int power(int x, int y) {
- if ( x == 1 )
-  return y;
- else
-  return //<<Missing a Recursive call>>
+    <textarea  id="codeTextarea">
+int largest(int[] numbers, int index) {
+ // <<Missing base case>> 
+   {
+    return numbers[index];
+   }
+ else if(numbers[index] > numbers[index+1]) {
+    numbers[index+1] = numbers[index];
+   }
+ return largest(numbers,index+1);
 }
-
 </textarea></p>
-
 
       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ editor.getValue() ] </div>
+      <div class="guess"> [ editor.getValue()  ] </div>
         <div class="validator-function">
-          window.codeValue = editor.getValue();
-          window.progexType= "recursion";    
-         window.summexName=  "recwrc6PROG";
+	     window.codeValue = editor.getValue();
+         window.progexType= "recursion";
+         window.summexName= "recCLargestPROG";
         </div>
       </div>
       <div class="hints">
