--- a/Exercises/RecurTutor/recCPowerPROG.html
+++ b/Exercises/RecurTutor/recCPowerPROG.html
@@ -1,52 +1,47 @@
 <!DOCTYPE html>
-<html data-require="math">
+<html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 12</title>
+  <title> Recursion Programming Exercise: Power</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
  
+ 
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
   <script>
-   var editor = CodeMirror.fromTextArea(codeTextarea, {
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
     lineNumbers: true,
     mode:  "text/x-java"
-   });
-  </script>
+  });
   
+  </script>
 </head>
 <body  data-height="550" data-width="950">
    
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
-  <div class="problems">
+   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">  Given the following recursive function write down the missing recursive call such that this function counts the number of As in a given string.
-
+   
+      <p class="problem" id = "test">  Given the following recursive function 
+      write down the missing recursive call such that this function computes 
+      the value of y to the x power:
+    
       <br />
     </h4>
     <p></p>
-    <textarea  id="codeTextarea">int countChr(String str ) {	
-if (str.length() == 0) {
-  return 0;
+    <textarea  id="codeTextarea">int power(int x, int y) {
+ if ( x == 1 )
+  return y;
+ else
+  return //<<Missing a Recursive call>>
 }
-int count = 0;
-if (str.substring(0, 1).equals("A")) {
-  count = 1;
-}
-return count + //<<Missing a Recursive call>>
-}
+
 </textarea></p>
+
 
       <div class="question">
 	
@@ -56,7 +51,7 @@ return count + //<<Missing a Recursive call>>
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";    
-          window.summexName= "recwrc12PROG";
+         window.summexName=  "recCPowerPROG";
         </div>
       </div>
       <div class="hints">
