--- a/Exercises/RecurTutor/recCSumOfDigitsPROG.html
+++ b/Exercises/RecurTutor/recCSumOfDigitsPROG.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 2</title>
+  <title> Recursion Programming Exercise: Sum Of the Digits</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script> window.OpenPopKa = true;  </script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
-  
-
+ 
+ 
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -17,12 +17,12 @@
     lineNumbers: true,
     mode:  "text/x-java"
   });
-  </script>
-
-
-</head>
-<body >
   
+  </script>
+</head>
+  
+<body >
+   
 <div class="exercise">
   <div class="vars">
     <var id="listel1">randRange(0, 99)</var>
@@ -33,28 +33,31 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function, write down the missing code so that this function concatenates the values in an array named list and returns it in a String. The values must be separated with a space and in the order of increasing subscript. The initial call to the function will be made with an index value of zero.
-      <br />
+      <p class="problem" id = "test">   Given the following recursive function 
+      write down the missing recursive call such that this function takes 
+      a non-negative integer and returns the sum of its digits. 
+      For example, sumOfDigits(1234) returns 1+2+3+4 =10.
+    <br />
     </h4>
     <p></p>
-    <textarea  id="codeTextarea">
-String recursiveprint(String[] list, int index) { 
- if (index < list.length) 
-   // <<Missing code>> 
-
- return "";   
+    <textarea  id="codeTextarea">int sumOfDigits(int number)
+{  
+  if(number/10 == 0) 
+    return number;    
+  return //<<Missing a Recursive call>>
 }
+
 </textarea></p>
 
       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ editor.getValue() ] </div>
+      <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
           window.codeValue = editor.getValue();
-          window.progexType= "recursion";          
-          window.summexName = "recwbca2PROG";
+          window.progexType= "recursion";    
+          window.summexName=  "recCSumOfDigitsPROG";
         </div>
       </div>
       <div class="hints">
