--- a/Exercises/RecurTutor/recCSumtokPROG.html
+++ b/Exercises/RecurTutor/recCSumtokPROG.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 13</title>
+  <title> Recursion Programming Exercise: Cummulative Sum</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+<script src="../../lib/odsaStyle-min.css"></script>
  
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
@@ -20,9 +20,9 @@
   
   </script>
 </head>
+<body  data-height="550" data-width="950">
   
-<body >
-   
+
 <div class="exercise">
   <div class="vars">
     <var id="listel1">randRange(0, 99)</var>
@@ -33,17 +33,26 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">   Given the following recursive function write down the missing recursive call such that this function takes a non-negative integer and returns the sum of its digits. For example, sumOfDigits(1234) returns 1+2+3+4 =10.
-    <br />
+      <p class="problem" id = "test">   Given the following mystery function write
+       down the missing recursive call such that this function returns 
+       a cumulative sum of the values from 1 to k. 
+       (e.g. 15 will be returned when mystery(5) is called, 21 when mystery(6) 
+       is called and so on) .
+	  
+      <br />
     </h4>
     <p></p>
-    <textarea  id="codeTextarea">int sumOfDigits(int number)
-{  
-  if(number/10 == 0) 
-    return number;    
-  return //<<Missing a Recursive call>>
+    <textarea  id="codeTextarea">int sumtok(int k) { 
+  if (k <= 0) 
+  {
+    return 0;
+  }
+  else 
+  {
+    return //<<Missing a Recursive call>>
+  }
 }
-
+	
 </textarea></p>
 
       <div class="question">
@@ -54,7 +63,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";    
-          window.summexName=  "recwrc13PROG";
+         window.summexName=  "recCSumtokPROG";
         </div>
       </div>
       <div class="hints">
