--- a/Exercises/RecurTutor/recCodeCompSumm1.html
+++ b/Exercises/RecurTutor/recCodeCompSumm1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Code Completion: Base Case </title>
+  <title> Recursion Code Completion Exercises Set 1</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
@@ -16,10 +16,9 @@
 </head>
 
 <body  data-height="580" data-width="1000">
-  <div class="exercise" data-name="recwbc1PROG"></div>
-  <div class="exercise" data-name="recwbc1PROG"></div>
-  <div class="exercise" data-name="recwbca2PROG"></div>
-  <div class="exercise" data-name="recwbcba5PROG"></div>
-  <div class="exercise" data-name="recwbcba9PROG"></div>
+  <div class="exercise" data-name="recCLargestPROG"></div>
+  <div class="exercise" data-name="recCPrintPROG"></div> 
+  <div class="exercise" data-name="recCMultiplyPROG"></div>
+  <div class="exercise" data-name="recCGcdPROG"></div>
 </body>
 </html>
