--- a/Exercises/RecurTutor/recCodeCompSumm3.html
+++ b/Exercises/RecurTutor/recCodeCompSumm3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Code Completion: Sum Function Recursive Call </title>
+  <title> Recursion Code Completion Set 3 </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
@@ -14,8 +14,8 @@
 
 
 <body  data-height="580" data-width="1000">
-  <div class="exercise" data-name="recwrc4PROG"></div>
-  <div class="exercise" data-name="recwrc7PROG"></div>
-  <div class="exercise" data-name="recwrc13PROG"></div>
+  <div class="exercise" data-name="recCAddoddPROG"></div>
+  <div class="exercise" data-name="recCSumAllPROG"></div> 
+  <div class="exercise" data-name="recCSumOfDigitsPROG"></div> 
 </body>
 </html>
