--- a/Exercises/RecurTutor/recHDecibinaryPROG.html
+++ b/Exercises/RecurTutor/recHDecibinaryPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 18</title>
+  <title> Recursion Programming Exercise: Decimal to Binary</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -21,42 +21,36 @@
   });
   </script>     
  
-
+ 
 </head>
+
 <body  data-height="650" data-width="950">
    
-
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">  Given the following recursive function write down the missing two conditions such that this function ,given two Strings, returns true if the two strings have the same sequence of characters but in the opposite order (ignoring white space and capitalization), and returns false otherwise. 
+      <p class="problem" id = "test"> Given the following recursive function write
+       down the missing code at the else such that this function 
+       returns the binary equivalent of an integer N in a String spaces seprated. 
+       Example: the binary equivalent of 13 may be found by repeatedly dividing 13
+       by 2.So, 13 in base 2 is 1 1 0 1.  
     <br />
     </h4>
     <p></p>
   
-    <textarea  id="codeTextarea">boolean isReverse(String s1, String s2) {  
- if //<<Missing condition 1>>  
-   return true;
- else if //<<Missing condition 2>> 
-   return false;	  
+    <textarea  id="codeTextarea">String decibinary (int num)
+{
+ if ( num < 2)
+  return Integer.toString(num);
  else
- {
-   String s1first = s1.substring(0, 1);
-   String s2last = s2.substring(s2.length() - 1);
-   return s1first.equalsIgnoreCase(s2last) && isReverse(s1.substring(1), s2.substring(0, s2.length()-1));
- }
+  return //<<Missing a Recursive call>> + //<<Missing command>>;
 }
 
 </textarea></p>
+ 
 
-      <div class="question">
+       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
@@ -64,7 +58,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "rechw2bc18PROG";
+          window.summexName= "recHDecibinaryPROG";
          //return "openPop";
         </div>
       </div>
