--- a/Exercises/RecurTutor/recHIsReversePROG.html
+++ b/Exercises/RecurTutor/recHIsReversePROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 27</title>
+  <title> Recursion Programming Exercise: Is Reverse</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -10,7 +10,6 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script> 
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
@@ -21,40 +20,41 @@
     mode:  "text/x-java"
   });
   </script>     
+ 
 
-  
 </head>
 <body  data-height="650" data-width="950">
    
-<div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
 
+<div class="exercise">
+ 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">
-        Given the following recursive function signature, write the function code such that this function modifies an array of Strings to remove duplicates. For example, if the list has the values {"recursion", "recursion", "is","is", "cool", "cool"} before the method is called, it should have the values {"recursion", "is", "cool"}. You may not create any new arrays.
- <br />
-</h4>
-<p></p>
- 
-<textarea  id="codeTextarea"> void removeDuplicates(ArrayList<String> list, int counter)
-{
+      <p class="problem" id = "test">  Given the following recursive function 
+      write down the missing two conditions such that this function 
+      ,given two Strings, returns true if the two strings have the same sequence 
+      of characters but in the opposite order (ignoring white space 
+      and capitalization), and returns false otherwise. 
+    <br />
+    </h4>
+    <p></p>
+  
+    <textarea  id="codeTextarea">boolean isReverse(String s1, String s2) {  
+ if //<<Missing condition 1>>  
+   return true;
+ else if //<<Missing condition 2>> 
+   return false;	  
+ else
+ {
+   String s1first = s1.substring(0, 1);
+   String s2last = s2.substring(s2.length() - 1);
+   return s1first.equalsIgnoreCase(s2last) && 
+          isReverse(s1.substring(1), 
+          s2.substring(0, s2.length()-1));
+ }
+}
 
-
-
-		
-
-
-
-	
-}	
 </textarea></p>
-
 
       <div class="question">
 	
@@ -64,7 +64,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "recw27PROG";
+          window.summexName= "recHIsReversePROG";
          //return "openPop";
         </div>
       </div>
