--- a/Exercises/RecurTutor/recWCnonballPROG.html
+++ b/Exercises/RecurTutor/recWCnonballPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 17</title>
+  <title> Recursion Programming Exercise: Cannonballs </title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -10,6 +10,8 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../lib/odsaStyle-min.css"></script>
+ 
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
@@ -21,36 +23,39 @@
   });
   </script>     
  
-
+ 
 </head>
-
-<body  data-height="650" data-width="950">
+<body  data-height="750" data-width="1000">
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
+ 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">  Given the following recursive function write down the missing recursive call such that this function determines the minimum element in an array of integers.  
-		  
-    <br />
-    </h4>
-    <p></p>
+
+      <p class="problem" id = "test"> <p align="center"><img src= "../../RST/Images/cannonballs.png" width="100" height="75"></p>
+Spherical objects, such as cannonballs, can be stacked to form a pyramid with one 
+cannonball at the top, sitting on top of a square composed of four cannonballs, 
+sitting on top of a square composed of nine cannonballs, and so forth.
+Given the following recursive function signature, write the function code such 
+that it takes as its argument the height of a pyramid of cannonballs 
+and returns the number of cannonballs it contains based on the height of 
+the stack. <br />
+</h4>
+<p></p>
  
-    <textarea  id="codeTextarea">int recursiveMin(int numbers[] , int startIndex)
-{
-  if(startIndex+1 == numbers.length)
-   return numbers[startIndex]; 
-  else
-   return Math.min(numbers[startIndex], //<<Missing a Recursive call>>);
-  
+<textarea  id="codeTextarea">int Cannonball(int height){
+		
+
+
+
+
+
+
+
+
+
+
 }
 </textarea></p>
-
 
       <div class="question">
 	
@@ -58,9 +63,9 @@
       <div class="solution" data-type="custom">
        <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-		  window.progexType= "recursion";
           window.codeValue = editor.getValue();
-          window.summexName= "rechwrc17PROG";       
+          window.progexType= "recursion";
+          window.summexName= "recWCnonballPROG";
          //return "openPop";
         </div>
       </div>
@@ -72,4 +77,3 @@
 
 </body>
 </html>
-
