--- a/Exercises/RecurTutor/recWIsSubsetSumPROG.html
+++ b/Exercises/RecurTutor/recWIsSubsetSumPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 21</title>
+  <title> Recursion Programming Exercise: Subset Sum</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -12,7 +12,6 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
  
- 
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -22,40 +21,39 @@
     mode:  "text/x-java"
   });
   </script>     
- 
- 
-</head>
-<body  data-height="750" data-width="1000">
-<div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
 
+</head>
+<body  data-height="650" data-width="950">
+   
+<div class="exercise">
+ 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-
-      <p class="problem" id = "test"> <p align="center"><img src= "../../RST/Images/cannonballs.png" width="100" height="75"></p>
-Spherical objects, such as cannonballs, can be stacked to form a pyramid with one cannonball at the top, sitting on top of a square composed of	four cannonballs, sitting on top of a square composed of nine cannonballs, and so forth. Given the following recursive function signature, write the function code such that it takes as its argument the height of a pyramid	of cannonballs and returns the number of cannonballs it contains based on the height of the stack. <br />
+      <p class="problem" id = "test"> Given the following recursive function 
+      signature, write a recursive function that takes a set of integers, 
+      the number of integers and a target sum, your goal is to find whether 
+      a subset of those numbers adds up to the target sum. 
+      For example, given the set 3,8,1,7,-3 (where n is 5 for this set)
+       and the target sum is 4, the result is true because the subset 3,1 
+       sums to 4. Also, if the target is 6 the result will be true because 
+       the subset 8,1,-3 sums to 6.  On the other hand, if the target is 2 
+       then the result is false because non of the subsets can sum to 2. 
+       It is only required to return true or false. 
+       Note that: n is the number of elements in the set array and the 
+       subset could have from 1 to n elements.
+			
+ <br />
 </h4>
-<p></p>
+ <p></p>
  
-<textarea  id="codeTextarea">int Cannonball(int height){
+<textarea  id="codeTextarea">boolean isSubsetSum(int set[], int n, int sum)
+{		
+
+
 		
-
-
-
-
-
-
-
-
-
-
-}
+}		
 </textarea></p>
+
 
       <div class="question">
 	
@@ -65,7 +63,7 @@ Spherical objects, such as cannonballs, can be stacked to form a pyramid with on
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "recw21PROG";
+          window.summexName= "recWIsSubsetSumPROG";
          //return "openPop";
         </div>
       </div>
