--- a/Exercises/RecurTutor/recWNumOfPathsPROG.html
+++ b/Exercises/RecurTutor/recWNumOfPathsPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 26</title>
+  <title> Recursion Programming Exercise: Number of Paths</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -26,13 +26,7 @@
   
 
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
+ 
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test"> Given the following recursive function signature, write the function code such that this function counts the number of different ways to reach a	basketball score. Example: For the input 3, the output will be 4, since there are 4 different ways to accumulate 3: 1+1+1, 1+2, 2+1, 3.		
@@ -59,7 +53,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "recw26PROG";
+          window.summexName= "recWNumOfPathsPROG";
          //return "openPop";
         </div>
       </div>
