--- a/Exercises/RecurTutor/recWRvrsStrngPROG.html
+++ b/Exercises/RecurTutor/recWRvrsStrngPROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 16</title>
+  <title> Recursion Programming Exercise: Reverse String</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -10,6 +10,9 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+
+  <script src="../../lib/odsaStyle-min.css"></script>
+ 
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
@@ -20,39 +23,32 @@
     mode:  "text/x-java"
   });
   </script>     
- 
- 
-</head>
 
-<body  data-height="650" data-width="950">
+</head>
+<body  data-height="600" data-width="950">
    
 <div class="exercise">
-  <div class="vars">
-    <var id="listel1">randRange(0, 99)</var>
-    <var id="listel2">randRange(0, 99)</var>
-    <var id="listel3">randRange(0, 99)</var>
-    <var id="listel4">randRange(0, 99)</var>
-  </div>
-
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function write down the missing code at the else such that this function returns the binary equivalent of an integer N in a String spaces seprated. Example: the binary equivalent of 13 may be found by repeatedly dividing 13 by 2.So, 13 in base 2 is 1 1 0 1.  
-    <br />
-    </h4>
-    <p></p>
-  
-    <textarea  id="codeTextarea">String decibinary (int num)
-{
- if ( num < 2)
-  return Integer.toString(num);
- else
-  return //<<Missing a Recursive call>> + "  " + //<<Missing a command>>;
-}
-
-</textarea></p>
+      <p class="problem" id = "test"> Given the following recursive function signature, write the function code such that this function returns the given string 
+      in a reverse order. <br />
+</h4>
+ <p></p>
  
+<textarea  id="codeTextarea"> String reverseStringRecursive (String str)
+{
 
-       <div class="question">
+
+
+
+
+
+
+		
+}
+</textarea></p>
+
+      <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
@@ -60,7 +56,7 @@
         <div class="validator-function">
           window.codeValue = editor.getValue();
           window.progexType= "recursion";
-          window.summexName= "rechwrcra16PROG";
+          window.summexName= "recWRvrsStrngPROG";
          //return "openPop";
         </div>
       </div>
