--- a/Exercises/RecurTutor/recWriteSumm1.html
+++ b/Exercises/RecurTutor/recWriteSumm1.html
@@ -16,10 +16,10 @@
 </head>
 
 <body  data-height="580" data-width="1000">
-  <div class="exercise" data-name="recw24PROG"></div>
-  <div class="exercise" data-name="recw26PROG"></div>
-  <div class="exercise" data-name="recw28PROG"></div>
-  <div class="exercise" data-name="recw29PROG"></div>
+  <div class="exercise" data-name="recWMinOpsPROG"></div>
+  <div class="exercise" data-name="recWNumOfPathsPROG"></div>
+  <!-- very hard <div class="exercise" data-name="recWCountInvPROG"></div>-->
+  <div class="exercise" data-name="recWIsbalancPROG"></div>
 
 </body>
 </html>
